# sandbox

./: .gitignore
.claude/: settings.local.json
ControlLibrary/.claude/: settings.local.json
ControlLibrary/ControlsLib/: ControlsLib.sln  Form1.Designer.cs  Form1.cs  Program.cs  StateLabel.Designer.cs  StateLabel.cs
IR_Gen/: ir_object_generator.py  readme.txt  requirements.txt  thermal_merger.py
IR_Gen/.claude/: settings.local.json
KC-135/: README.md
KC-135/.claude/: settings.local.json
KC-135/KC-135/: .gitignore  ActivityLED.Designer.cs  ActivityLED.cs  Form1.Designer.cs  Form1.cs  Form1_Backup.cs  Form1_Simple.cs  KC-135.csproj  KC-135.sln  Program.cs  Sensor.cs  SensorControllerInterface.cs  SensorMode.cs  TCPClient.cs  TestControl.cs  Triangle.cs
KC-135/sensorSimBackend/: .gitignore  CMakeLists.txt  Sensor.cpp  Sensor.h  SensorController  SensorControllerAPI.cpp  SensorControllerAPI.h  SensorState.h  TCPServer.cpp  TCPServer.h  UDPSocketListener.cpp  UDPSocketListener.h  main.cpp
KC-135/sensorSimBackend/.claude/: settings.local.json
NavSim/: BUILD_INSTRUCTIONS.md  NavSim.sln  requirements.txt  setup_python.bat  test_simple_build.bat
NavSim/.claude/: settings.local.json
NavSim/NavSim/: NavEntity.cpp  NavEntity.h  NavSim.sln  NavSim.vcxproj  Position.cpp  Position.h  PythonIntegration.cpp  PythonIntegration.h  SimpleNavEntity.cpp  SimpleNavEntity.h
NavSim/NavSimExample/: NavSimExample.vcxproj  full_example.cpp  main.cpp  simple_main.cpp
NavSim/NavSimExample/x64/Debug/: NavSimExample.exe.recipe  NavSimExample.ilk  vc143.idb
NavSim/NavSimExample/x64/Debug/NavSimExample.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  NavSimExample.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
NavSim/NavVisualiser/: __init__.py  main.py  realtime_visualizer.py  requirements.txt
NavSim/Simulator/: CMakeLists.txt  Makefile  NavSimulator.sln  NavSimulator.vcxproj  NavSimulator.vcxproj.filters  position.pb.cpp  position.pb.h  python_interface.cpp  python_interface.h  simulator.cpp  simulator.h
NavSim/SimulatorDemo/: CMakeLists.txt  Makefile  SimulatorDemo  SimulatorDemo.sln  SimulatorDemo.vcxproj  SimulatorDemo.vcxproj.filters  main.cpp
NavSim/algorithm/: README.md
NavSim/algorithm/src/: __init__.py  nav_listener.py  position.py  position_pb2.py
NavSim/protobuf/: position.proto
ProtoTest/.claude/: settings.local.json
ProtoTest/cSharp/: Command.cs
ProtoTest/proto/: command.proto  generate_csharp.bat
cpp/: CMakeLists.txt  README.md  Resource.cpp  Resource.h  main.cpp
cpp/.claude/: settings.local.json
lang/: CMakeLists.txt  README.md  distance_calculator.py  main.cpp  position.h  position.proto  python_interface.cpp
lang/build3/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  PositionDistance.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  position_distance.vcxproj  position_distance.vcxproj.filters
pinvokeExample/: PInvokeExample.sln  README.md
pinvokeExample/ClientApp/: ClientApp.vcxproj  main.cpp
pinvokeExample/MathLibrary/: MathLibrary.cpp  MathLibrary.h  MathLibrary.vcxproj  MathLibrary.vcxproj.filters
playback/: README.md  protobuf_deserializer.py
protoreader/: ImageUtils.cs  Program.cs  README.md  protoReader.csproj
webcam/: README.md  motion_detector.py
